add swagger settings
